syntax = "proto3";
package com.example.taxis;

message HelloRequest {
  int32 id = 1;
  int32 port = 2;
  string ip = 3;
  Position position = 4;
  int32 batteryLevel = 5;
}
message HelloResponse {
  int32 id = 1;
}

message Position{
  int32 x = 1;
  int32 y = 2;
}

message RideElectionRequest {
  int32 idRide = 1;
  int32 idTaxi = 2;
  Position startPositionRide = 3;
  int32 batteryLevel = 4;
}

message RideElectionResponse {
  int32 idRide = 1;
  int32 idTaxi = 2;
  string messageElection = 3;
}

message TaxiInfoAfterRideRequest {
  int32 idTaxi = 1;
  int32 idRide = 2;
  Position finalPosition = 3;
  int32 batteryLevel = 4;
}

message TaxiInfoAfterRideResponse {
  int32 idTaxi = 1;
  string messageResponse = 2;
}

message SendRechargeTaxiRequest {
  Position rechargeStation = 1;
  int32 idTaxi = 2;
  int64 timestamp = 3;
}
message ReplyRechargeTaxiResponse {
  string messageResponse = 1;
}

message SendExitTaxiRequest {
  int32 idTaxi = 1;
}

message ReplyExitTaxiResponse {
  string messageResponse = 1;
}

service GrpcService {
  rpc greeting(HelloRequest) returns (HelloResponse);
  rpc election(RideElectionRequest) returns (RideElectionResponse);
  rpc notifyTaxisAfterRide(TaxiInfoAfterRideRequest) returns (TaxiInfoAfterRideResponse);
  rpc recharge(SendRechargeTaxiRequest) returns (ReplyRechargeTaxiResponse);
  rpc notifyExit(SendExitTaxiRequest) returns (ReplyExitTaxiResponse);
}
